# lipm_walking_controller

./: .clang-format-common.sh  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format.yml
etc/: LIPMWalking.in.yaml
include/lipm_walking/: Controller.h  ExternalPlanner.h  FootstepPlan.h  PlanInterpolator.h  State.h  WalkingState.h
include/lipm_walking/utils/: SE2d.h
launch/: run_online_footstep_planner_and_joy_node.launch
plugins/ExternalFootstepPlanner/: CMakeLists.txt
plugins/ExternalFootstepPlanner/etc/: ExternalFootstepPlannerPlugin.in.yaml  ExternalFootstepPlannerPlugin.yaml
plugins/ExternalFootstepPlanner/include/ExternalFootstepPlanner/: DummyPlanner.h  ExternalFootstepPlanner.h  ExternalFootstepPlannerPlugin.h  HybridPlanner.h  InputConvertor.h  OnlineFootstepPlanner.h  Plan.h  Request.h  SE2d.h
plugins/ExternalFootstepPlanner/src/: DummyPlanner.cpp  ExternalFootstepPlanner.cpp  ExternalFootstepPlannerPlugin.cpp  HybridPlanner.cpp  InputConvertor.cpp  OnlineFootstepPlanner.cpp  Plan.cpp
src/: CMakeLists.txt  Controller.cpp  ExternalPlanner.cpp  FootstepPlan.cpp  ModelPredictiveControl.cpp  PlanInterpolator.cpp  lib.cpp
src/states/: CMakeLists.txt  DoubleSupport.cpp  DoubleSupport.h  Initial.cpp  Initial.h  RunStabilizer.cpp  SingleSupport.cpp  SingleSupport.h  Standing.cpp  Standing.h
src/states/data/: states.yaml
